--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,11 +4,10 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
         {
             "type": "php",
             "request": "launch",
-            "name": "Launch Chrome against localhost",
+            "name": "XDebug",
             "url": "http://localhost/musicoterapia/",
             "webRoot": "${workspaceFolder}"
         }
